Added temp test files to '.gitignore'.
Added 'imp/test/feature.el' temp folder to the .gitignore so they won't
get accidentally checked in.

--- a/legacy/sn003-doom/.gitignore
+++ b/legacy/sn003-doom/.gitignore
@@ -31,6 +31,9 @@ code/instance/*
 # Zip for sending in:
 *.zip
 
+# 'imp' unit test temporary files
+modules/emacs/imp/test/loading/features/*
+
 #                                  ---END!---                                  #
 #----------------------- Custom, Actual, For-This-Repo ------------------------#
 #------------------------------------------------------------------------------#
