--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,10 @@ tmp/
 *.*~
 \#*
 .\#*
-.local/
 .extension/
 *.cache*
 *.log
 /modules/private
-test/.local*/
-test/result
 
 # emacs tempfiles that shouldn't be there
 .dap-breakpoints
@@ -24,6 +21,7 @@ auto-save-list/
 cask/
 ede-projects.el
 elpa/
+straight/
 eln-cache/
 network-security.data
 places
