Add smudge repo to gitignores

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# ╔════════════════════════════════╦═══════╦═════════════════════════════════╗ #
+# ╠════════════════════════════════╣ Emacs ╠═════════════════════════════════╣ #
+# ╠════════════════════════════════╝       ╚═════════════════════════════════╣ #
+
+
 # [2022-03-23] Lovingly stolen from Doom Emacs.
 #   - https://github.com/hlissner/doom-emacs
 
@@ -38,3 +43,21 @@ var/
 *.fas
 *.dat
 *.eld
+
+# ╠════════════════════════════════╗       ╔═════════════════════════════════╣ #
+# ╠════════════════════════════════╣ Emacs ╠═════════════════════════════════╣ #
+# ╠════════════════════════════════╩═══════╩═════════════════════════════════╣ #
+# ║                                                                          ║ #
+# ╠═══════════════════════════════╦══════════╦═══════════════════════════════╣ #
+# ╠═══════════════════════════════╣ Personal ╠═══════════════════════════════╣ #
+# ╠═══════════════════════════════╝          ╚═══════════════════════════════╣ #
+
+# [2023-05-02] Currently, not all my packages are separate repos...
+# So just ignore these that _are_ their own Git repos:
+/packages/user/smudge
+
+
+
+# ╠═══════════════════════════════╗          ╔═══════════════════════════════╣ #
+# ╠═══════════════════════════════╣ Personal ╠═══════════════════════════════╣ #
+# ╚═══════════════════════════════╩══════════╩═══════════════════════════════╝ #
